--- a/src/components/searchBar/search.module.css
+++ b/src/components/searchBar/search.module.css
@@ -1,31 +1,38 @@
-.search{
-    padding-top:20px;
-    text-align: right;
-    margin-right: 20px;
+.search {
 }
-.inputSearch{
-   padding:0.6em;
-   border-color: rgb(241, 241, 241);
-   margin-bottom: 10px;
-   color: rgba(0,0,0,0.2);
-   text-align: right;
-   width: 12%;
-   margin: 1em;
-   border-radius:5px;
-   
+.inputSearch {
+  padding: 10px 5px 10px 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px 0px 0px 4px;
 }
+.inputSearch:hover {
+  background: rgb(254, 251, 251);
+}
+.buttonAdd {
+  padding: 10px 10px 10px 10px;
+  outline: none;
+  border: none;
+  font-size: 15px;
+  color: #fff;
+  background-color: #080808;
+  border-radius: 0px 0px 20px 0px;
+  cursor: pointer;
+  transition: 70ms;
 
+  /*     padding: 10px 10px 10px 10px;
+  outline: none;
+  border: none;
+  font-size: 15px;
+  color: #fff;
+  font-weight: 600;
+  background-color: #b535f6;
 
-.buttonAdd{
-    padding: 10px 24px;
-    border-radius: 12px;
-    border: none;
-    border: 2px solid #4CAF50;
-    color: rgb(255, 255, 255);
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    cursor: pointer;
-    background-color: #4CAF50;
-   
+  border-radius: 0px 0px 20px 0px;
+  cursor: pointer;
+  transition: 70ms; */
+}
+.buttonAdd:hover {
+  background: green;
+  color: #fff;
+  box-shadow: 0px 2px 0px 0px rgba(90, 7, 7, 0.525);
 }
