--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -41,6 +41,7 @@
 }
 
 .SliderHeader {
+  justify-content: center;
   width: 1280px;
   height: auto;
   margin: 50px auto 0;
@@ -62,7 +63,10 @@
 }
 
 .btnViewCharacter {
-  justify-content: center;
+  position: static;
+  margin-top: 1em;
+  margin-left: 30px;
+  justify-content: right;
   padding: 10px 40px 10px 40px;
   outline: none;
   border: none;
